--- a/public/runtime.css
+++ b/public/runtime.css
@@ -124,9 +124,6 @@
           .relative {
     position: relative
 }
-          .inset-0 {
-    inset: 0px
-}
           .bottom-2 {
     bottom: 0.5rem
 }
@@ -135,6 +132,9 @@
 }
           .left-0\.5 {
     left: 0.125rem
+}
+          .left-1\/2 {
+    left: 50%
 }
           .left-2 {
     left: 0.5rem
@@ -150,6 +150,9 @@
 }
           .top-0\.5 {
     top: 0.125rem
+}
+          .top-1\/2 {
+    top: 50%
 }
           .top-2 {
     top: 0.5rem
@@ -170,10 +173,6 @@
     margin-left: 0.5rem;
     margin-right: 0.5rem
 }
-          .mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem
-}
           .mb-2 {
     margin-bottom: 0.5rem
 }
@@ -192,14 +191,17 @@
           .mt-2 {
     margin-top: 0.5rem
 }
+          .mt-4 {
+    margin-top: 1rem
+}
+          .block {
+    display: block
+}
           .inline-block {
     display: inline-block
 }
           .flex {
     display: flex
-}
-          .inline-flex {
-    display: inline-flex
 }
           .grid {
     display: grid
@@ -207,14 +209,17 @@
           .h-10 {
     height: 2.5rem
 }
-          .h-12 {
-    height: 3rem
-}
           .h-14 {
     height: 3.5rem
 }
+          .h-2 {
+    height: 0.5rem
+}
           .h-32 {
     height: 8rem
+}
+          .h-4 {
+    height: 1rem
 }
           .h-5 {
     height: 1.25rem
@@ -222,8 +227,8 @@
           .h-6 {
     height: 1.5rem
 }
-          .h-screen {
-    height: 100vh
+          .h-80 {
+    height: 20rem
 }
           .min-h-screen {
     min-height: 100vh
@@ -237,11 +242,34 @@
           .w-16 {
     width: 4rem
 }
-          .w-24 {
-    width: 6rem
+          .w-2 {
+    width: 0.5rem
+}
+          .w-4 {
+    width: 1rem
+}
+          .w-40 {
+    width: 10rem
 }
           .w-5 {
     width: 1.25rem
+}
+          .w-full {
+    width: 100%
+}
+          .flex-shrink-0 {
+    flex-shrink: 0
+}
+          .flex-grow {
+    flex-grow: 1
+}
+          .-translate-x-1\/2 {
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+          .-translate-y-1\/2 {
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
 }
           .transform {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
@@ -278,9 +306,6 @@
           .justify-center {
     justify-content: center
 }
-          .justify-between {
-    justify-content: space-between
-}
           .justify-items-center {
     justify-items: center
 }
@@ -293,11 +318,24 @@
           .gap-4 {
     gap: 1rem
 }
+          .gap-5 {
+    gap: 1.25rem
+}
           .gap-6 {
     gap: 1.5rem
 }
           .gap-8 {
     gap: 2rem
+}
+          .space-x-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)))
+}
+          .space-y-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse))
 }
           .text-pretty {
     text-wrap: pretty
@@ -329,6 +367,10 @@
           .border-solid {
     border-style: solid
 }
+          .border-black {
+    --tw-border-opacity: 1;
+    border-color: rgb(0 0 0 / var(--tw-border-opacity, 1))
+}
           .border-black\/\[\.08\] {
     border-color: rgb(0 0 0 / .08)
 }
@@ -343,12 +385,24 @@
     --tw-border-opacity: 1;
     border-color: rgb(34 211 238 / var(--tw-border-opacity, 1))
 }
+          .border-gray-300 {
+    --tw-border-opacity: 1;
+    border-color: rgb(209 213 219 / var(--tw-border-opacity, 1))
+}
           .border-gray-400 {
     --tw-border-opacity: 1;
     border-color: rgb(156 163 175 / var(--tw-border-opacity, 1))
 }
           .border-transparent {
     border-color: transparent
+}
+          .bg-amber-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1))
+}
+          .bg-black {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1))
 }
           .bg-black\/\[\.05\] {
     background-color: rgb(0 0 0 / .05)
@@ -369,10 +423,6 @@
     --tw-bg-opacity: 1;
     background-color: rgb(34 211 238 / var(--tw-bg-opacity, 1))
 }
-          .bg-gray-100 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1))
-}
           .bg-gray-200 {
     --tw-bg-opacity: 1;
     background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
@@ -389,37 +439,25 @@
     --tw-bg-opacity: 1;
     background-color: rgb(187 247 208 / var(--tw-bg-opacity, 1))
 }
-          .bg-green-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(74 222 128 / var(--tw-bg-opacity, 1))
-}
           .bg-green-500 {
     --tw-bg-opacity: 1;
     background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1))
-}
-          .bg-pink-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(244 114 182 / var(--tw-bg-opacity, 1))
-}
-          .bg-purple-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(192 132 252 / var(--tw-bg-opacity, 1))
 }
           .bg-red-500 {
     --tw-bg-opacity: 1;
     background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1))
 }
-          .bg-white {
+          .bg-teal-50 {
     --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
-}
-          .bg-amber-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1))
+    background-color: rgb(240 253 250 / var(--tw-bg-opacity, 1))
 }
           .bg-teal-500 {
     --tw-bg-opacity: 1;
     background-color: rgb(20 184 166 / var(--tw-bg-opacity, 1))
+}
+          .bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
 }
           .bg-yellow-500 {
     --tw-bg-opacity: 1;
@@ -452,6 +490,10 @@
           .py-0\.5 {
     padding-top: 0.125rem;
     padding-bottom: 0.125rem
+}
+          .py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem
 }
           .py-2 {
     padding-top: 0.5rem;
@@ -500,6 +542,10 @@
           .capitalize {
     text-transform: capitalize
 }
+          .text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity, 1))
+}
           .text-gray-500 {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity, 1))
@@ -519,11 +565,6 @@
           .text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
-}
-          .shadow-inner {
-    --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-    --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
           .shadow-lg {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -545,6 +586,14 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 150ms
 }
+          .placeholder\:text-gray-400::-moz-placeholder {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity, 1))
+}
+          .placeholder\:text-gray-400::placeholder {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity, 1))
+}
           .checked\:bg-blue-600:checked {
     --tw-bg-opacity: 1;
     background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1))
@@ -559,6 +608,10 @@
           .hover\:bg-\[\#f2f2f2\]:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(242 242 242 / var(--tw-bg-opacity, 1))
+}
+          .hover\:bg-amber-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1))
 }
           .hover\:bg-blue-600:hover {
     --tw-bg-opacity: 1;
@@ -576,21 +629,9 @@
     --tw-bg-opacity: 1;
     background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1))
 }
-          .hover\:bg-pink-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(219 39 119 / var(--tw-bg-opacity, 1))
-}
-          .hover\:bg-purple-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1))
-}
           .hover\:bg-red-600:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1))
-}
-          .hover\:bg-amber-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1))
 }
           .hover\:bg-teal-600:hover {
     --tw-bg-opacity: 1;
@@ -606,29 +647,38 @@
           .hover\:underline-offset-4:hover {
     text-underline-offset: 4px
 }
+          .focus\:border-emerald-500:focus {
+    --tw-border-opacity: 1;
+    border-color: rgb(16 185 129 / var(--tw-border-opacity, 1))
+}
+          .focus\:outline-none:focus {
+    outline: 2px solid transparent;
+    outline-offset: 2px
+}
+          .focus\:ring-2:focus {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
+}
+          .focus\:ring-amber-300:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(252 211 77 / var(--tw-ring-opacity, 1))
+}
           .focus\:ring-blue-300:focus {
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity, 1))
+}
+          .focus\:ring-emerald-500:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(16 185 129 / var(--tw-ring-opacity, 1))
 }
           .focus\:ring-green-300:focus {
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(134 239 172 / var(--tw-ring-opacity, 1))
 }
-          .focus\:ring-pink-300:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity, 1))
-}
-          .focus\:ring-purple-300:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(216 180 254 / var(--tw-ring-opacity, 1))
-}
           .focus\:ring-red-300:focus {
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(252 165 165 / var(--tw-ring-opacity, 1))
-}
-          .focus\:ring-amber-300:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(252 211 77 / var(--tw-ring-opacity, 1))
 }
           .focus\:ring-teal-300:focus {
     --tw-ring-opacity: 1;
@@ -638,6 +688,10 @@
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(253 224 71 / var(--tw-ring-opacity, 1))
 }
+          .active\:bg-amber-700:active {
+    --tw-bg-opacity: 1;
+    background-color: rgb(180 83 9 / var(--tw-bg-opacity, 1))
+}
           .active\:bg-blue-700:active {
     --tw-bg-opacity: 1;
     background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1))
@@ -646,21 +700,9 @@
     --tw-bg-opacity: 1;
     background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1))
 }
-          .active\:bg-pink-700:active {
-    --tw-bg-opacity: 1;
-    background-color: rgb(190 24 93 / var(--tw-bg-opacity, 1))
-}
-          .active\:bg-purple-700:active {
-    --tw-bg-opacity: 1;
-    background-color: rgb(126 34 206 / var(--tw-bg-opacity, 1))
-}
           .active\:bg-red-700:active {
     --tw-bg-opacity: 1;
     background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1))
-}
-          .active\:bg-amber-700:active {
-    --tw-bg-opacity: 1;
-    background-color: rgb(180 83 9 / var(--tw-bg-opacity, 1))
 }
           .active\:bg-teal-700:active {
     --tw-bg-opacity: 1;
