--- a/public/runtime.css
+++ b/public/runtime.css
@@ -124,6 +124,9 @@
           .relative {
     position: relative
 }
+          .bottom-0 {
+    bottom: 0px
+}
           .bottom-2 {
     bottom: 0.5rem
 }
@@ -147,6 +150,9 @@
 }
           .right-2 {
     right: 0.5rem
+}
+          .top-0 {
+    top: 0px
 }
           .top-0\.5 {
     top: 0.125rem
@@ -191,6 +197,9 @@
           .mt-2 {
     margin-top: 0.5rem
 }
+          .mt-20 {
+    margin-top: 5rem
+}
           .mt-4 {
     margin-top: 1rem
 }
@@ -206,6 +215,28 @@
           .grid {
     display: grid
 }
+          .hidden {
+    display: none
+}
+          .size-4 {
+    width: 1rem;
+    height: 1rem
+}
+          .size-5 {
+    width: 1.25rem;
+    height: 1.25rem
+}
+          .size-6 {
+    width: 1.5rem;
+    height: 1.5rem
+}
+          .size-7 {
+    width: 1.75rem;
+    height: 1.75rem
+}
+          .h-1\/2 {
+    height: 50%
+}
           .h-10 {
     height: 2.5rem
 }
@@ -218,20 +249,29 @@
           .h-32 {
     height: 8rem
 }
-          .h-4 {
-    height: 1rem
-}
           .h-5 {
     height: 1.25rem
 }
           .h-6 {
     height: 1.5rem
 }
+          .h-7 {
+    height: 1.75rem
+}
+          .h-8 {
+    height: 2rem
+}
           .h-80 {
     height: 20rem
 }
+          .h-full {
+    height: 100%
+}
           .min-h-screen {
     min-height: 100vh
+}
+          .w-1\/2 {
+    width: 50%
 }
           .w-10 {
     width: 2.5rem
@@ -242,9 +282,6 @@
           .w-16 {
     width: 4rem
 }
-          .w-2 {
-    width: 0.5rem
-}
           .w-4 {
     width: 1rem
 }
@@ -253,6 +290,15 @@
 }
           .w-5 {
     width: 1.25rem
+}
+          .w-6 {
+    width: 1.5rem
+}
+          .w-7 {
+    width: 1.75rem
+}
+          .w-\[2px\] {
+    width: 2px
 }
           .w-full {
     width: 100%
@@ -277,8 +323,14 @@
           .cursor-default {
     cursor: default
 }
+          .cursor-e-resize {
+    cursor: e-resize
+}
           .cursor-pointer {
     cursor: pointer
+}
+          .cursor-s-resize {
+    cursor: s-resize
 }
           .list-inside {
     list-style-position: inside
@@ -336,6 +388,9 @@
     --tw-space-y-reverse: 0;
     margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1rem * var(--tw-space-y-reverse))
+}
+          .overflow-auto {
+    overflow: auto
 }
           .text-pretty {
     text-wrap: pretty
@@ -519,9 +574,17 @@
     font-size: 1rem;
     line-height: 1.5rem
 }
+          .text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem
+}
           .text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem
+}
+          .text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem
 }
           .text-xs {
     font-size: 0.75rem;
@@ -541,6 +604,9 @@
 }
           .capitalize {
     text-transform: capitalize
+}
+          .leading-4 {
+    line-height: 1rem
 }
           .text-black {
     --tw-text-opacity: 1;
