--- a/public/runtime.css
+++ b/public/runtime.css
@@ -124,6 +124,9 @@
           .relative {
     position: relative
 }
+          .bottom-0 {
+    bottom: 0px
+}
           .bottom-2 {
     bottom: 0.5rem
 }
@@ -147,6 +150,9 @@
 }
           .right-2 {
     right: 0.5rem
+}
+          .top-0 {
+    top: 0px
 }
           .top-0\.5 {
     top: 0.125rem
@@ -179,6 +185,9 @@
           .mb-5 {
     margin-bottom: 1.25rem
 }
+          .mb-96 {
+    margin-bottom: 24rem
+}
           .me-2 {
     margin-inline-end: 0.5rem
 }
@@ -190,6 +199,9 @@
 }
           .mt-2 {
     margin-top: 0.5rem
+}
+          .mt-20 {
+    margin-top: 5rem
 }
           .mt-4 {
     margin-top: 1rem
@@ -205,6 +217,9 @@
 }
           .grid {
     display: grid
+}
+          .hidden {
+    display: none
 }
           .h-10 {
     height: 2.5rem
@@ -230,6 +245,9 @@
           .h-80 {
     height: 20rem
 }
+          .h-full {
+    height: 100%
+}
           .min-h-screen {
     min-height: 100vh
 }
@@ -254,6 +272,9 @@
           .w-5 {
     width: 1.25rem
 }
+          .w-\[2px\] {
+    width: 2px
+}
           .w-full {
     width: 100%
 }
@@ -277,8 +298,14 @@
           .cursor-default {
     cursor: default
 }
+          .cursor-e-resize {
+    cursor: e-resize
+}
           .cursor-pointer {
     cursor: pointer
+}
+          .cursor-s-resize {
+    cursor: s-resize
 }
           .list-inside {
     list-style-position: inside
@@ -336,6 +363,9 @@
     --tw-space-y-reverse: 0;
     margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1rem * var(--tw-space-y-reverse))
+}
+          .overflow-auto {
+    overflow: auto
 }
           .text-pretty {
     text-wrap: pretty
@@ -463,6 +493,18 @@
     --tw-bg-opacity: 1;
     background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1))
 }
+          .bg-green-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(74 222 128 / var(--tw-bg-opacity, 1))
+}
+          .bg-pink-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(244 114 182 / var(--tw-bg-opacity, 1))
+}
+          .bg-purple-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(192 132 252 / var(--tw-bg-opacity, 1))
+}
           .p-2 {
     padding: 0.5rem
 }
@@ -566,6 +608,9 @@
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
+          .opacity-60 {
+    opacity: 0.6
+}
           .shadow-lg {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -641,6 +686,14 @@
     --tw-bg-opacity: 1;
     background-color: rgb(202 138 4 / var(--tw-bg-opacity, 1))
 }
+          .hover\:bg-pink-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(219 39 119 / var(--tw-bg-opacity, 1))
+}
+          .hover\:bg-purple-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1))
+}
           .hover\:underline:hover {
     text-decoration-line: underline
 }
@@ -688,6 +741,14 @@
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(253 224 71 / var(--tw-ring-opacity, 1))
 }
+          .focus\:ring-pink-300:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity, 1))
+}
+          .focus\:ring-purple-300:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(216 180 254 / var(--tw-ring-opacity, 1))
+}
           .active\:bg-amber-700:active {
     --tw-bg-opacity: 1;
     background-color: rgb(180 83 9 / var(--tw-bg-opacity, 1))
@@ -711,6 +772,14 @@
           .active\:bg-yellow-700:active {
     --tw-bg-opacity: 1;
     background-color: rgb(161 98 7 / var(--tw-bg-opacity, 1))
+}
+          .active\:bg-pink-700:active {
+    --tw-bg-opacity: 1;
+    background-color: rgb(190 24 93 / var(--tw-bg-opacity, 1))
+}
+          .active\:bg-purple-700:active {
+    --tw-bg-opacity: 1;
+    background-color: rgb(126 34 206 / var(--tw-bg-opacity, 1))
 }
           .peer:checked ~ .peer-checked\:translate-x-6 {
     --tw-translate-x: 1.5rem;
